--- a/package.json
+++ b/package.json
@@ -22,5 +22,13 @@
 		"svelte": "^4.2.7",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.5.1",
+		"@fortawesome/free-brands-svg-icons": "^6.5.1",
+		"@fortawesome/free-solid-svg-icons": "^6.5.1",
+		"@fortawesome/svelte-fontawesome": "^0.2.1",
+		"@picocss/pico": "^1.5.11",
+		"unsplash-js": "^7.0.19"
+	}
 }
