--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
+		"svelte-preprocess": "^5.1.3",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
