--- a/package.json
+++ b/package.json
@@ -3,34 +3,34 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+	  "dev": "svelte-kit dev",
+	  "build": "svelte-kit build",
+	  "preview": "svelte-kit preview",
+	  "lint": "prettier --check . && eslint .",
+	  "format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "8.56.0",
-		"eslint": "^8.56.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.7",
-		"svelte-preprocess": "^5.1.3",
-		"vite": "^5.0.3"
+	  "@sveltejs/adapter-auto": "^3.0.0",
+	  "@sveltejs/adapter-static": "^3.0.1",
+	  "@sveltejs/kit": "^2.0.0",
+	  "@sveltejs/vite-plugin-svelte": "^3.0.0",
+	  "@types/eslint": "8.56.0",
+	  "eslint": "^8.56.0",
+	  "eslint-config-prettier": "^9.1.0",
+	  "eslint-plugin-svelte": "^2.35.1",
+	  "prettier": "^3.1.1",
+	  "prettier-plugin-svelte": "^3.1.2",
+	  "svelte": "^4.2.7",
+	  "svelte-preprocess": "^5.1.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^6.5.1",
-		"@fortawesome/free-brands-svg-icons": "^6.5.1",
-		"@fortawesome/free-solid-svg-icons": "^6.5.1",
-		"@fortawesome/svelte-fontawesome": "^0.2.1",
-		"@picocss/pico": "^1.5.11",
-		"unsplash-js": "^7.0.19"
+	  "@fortawesome/fontawesome-svg-core": "^6.5.1",
+	  "@fortawesome/free-brands-svg-icons": "^6.5.1",
+	  "@fortawesome/free-solid-svg-icons": "^6.5.1",
+	  "@fortawesome/svelte-fontawesome": "^0.2.1",
+	  "@picocss/pico": "^1.5.11",
+	  "unsplash-js": "^7.0.19"
 	}
-}
+  }
+  
