--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,11 +10,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '18.x' # using Node 18.x
+          node-version: '18.x' # uses Node 18.x
           cache: 'npm'
-      - run: npm cache clean --force
       - run: npm install
       - run: npm run build
+        env:
+          NODE_ENV: production
       - uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
