adding debugging in deploy dot yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
         env:
           NODE_ENV: production
           VITE_UNSPLASH_ACCESS_KEY: ${{ secrets.VITE_UNSPLASH_ACCESS_KEY }}
+      - name: List build directory contents # Debugging step
+        run: ls -lah build/
       - uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
